--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
   },
   "type": "module",
   "files": [
-    "dist/**/*.js",
+    "dist",
     "src/**/*.js"
   ],
   "module": "src/index.js",
-  "main": "src/index.js",
+  "main": "dist/d3-shape.min.cjs",
   "jsdelivr": "dist/d3-shape.min.js",
   "unpkg": "dist/d3-shape.min.js",
   "exports": {
     "umd": "./dist/d3-shape.min.js",
+    "require": "./dist/d3-shape.min.cjs",
     "default": "./src/index.js"
   },
   "sideEffects": false,
