--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "d3-shape",
+  "name": "@krisdages/d3-shape",
   "version": "3.1.0",
   "description": "Graphical primitives for visualization, such as lines and areas.",
   "homepage": "https://d3js.org/d3-shape/",
@@ -36,7 +36,7 @@
   },
   "sideEffects": false,
   "dependencies": {
-    "d3-path": "1 - 3"
+    "d3-path": "npm:@krisdages/d3-path@<4"
   },
   "devDependencies": {
     "d3-polygon": "1 - 3",
@@ -47,8 +47,7 @@
   },
   "scripts": {
     "test": "mocha 'test/**/*-test.js' && eslint src test",
-    "prepublishOnly": "rm -rf dist && yarn test && rollup -c",
-    "postpublish": "git push && git push --tags && cd ../d3.github.com && git pull && cp ../${npm_package_name}/dist/${npm_package_name}.js ${npm_package_name}.v${npm_package_version%%.*}.js && cp ../${npm_package_name}/dist/${npm_package_name}.min.js ${npm_package_name}.v${npm_package_version%%.*}.min.js && git add ${npm_package_name}.v${npm_package_version%%.*}.js ${npm_package_name}.v${npm_package_version%%.*}.min.js && git commit -m \"${npm_package_name} ${npm_package_version}\" && git push && cd -"
+    "prepublishOnly": "rm -rf dist && yarn test && rollup -c"
   },
   "engines": {
     "node": ">=12"
